--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		/>
 		<link
 			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
+			href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 		/>
 
 		<!-- Bootstrap CSS from a CDN. This way you don't have to include the bootstrap file yourself -->
@@ -40,7 +40,9 @@
 		>
 			<div class="row">
 				<header class="text-center col-12">
-					<h1 class="text-uppercase">
+					<h1
+						class="text-uppercase animate__animated animate__flip"
+					>
 						<strong
 							>The biggest startup event of
 							the year</strong
